--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -44,96 +44,98 @@
 
       <main class="content">
         <h1 class="form__title">стать участником</h1>
-        <div class="form__container">
-          <p class="form__step">шаг 2 из 4</p>
-          <div class="form__instruction">
-            <p class="form__heading">заполните форму</p>
-            <div class="form__paragraphs">
-              <p class="form__paragraph">Для участия вы можете выбрать:</p>
-              <ul>
-                <li>определенную позицию из меню</li>
-                <li>группу позиций</li>
-                <li>процент от продаж определенных позиций или всего меню</li>
-              </ul>
+        <div class="form__content">
+          <div class="form__container">
+            <p class="form__step">шаг 2 из 4</p>
+            <div class="form__instruction">
+              <p class="form__heading">заполните форму</p>
+              <div class="form__paragraphs">
+                <p class="form__paragraph">Для участия вы можете выбрать:</p>
+                <ul class="form__paragraph_list">
+                  <li>определенную позицию из меню</li>
+                  <li>группу позиций</li>
+                  <li>процент от продаж определенных позиций или всего меню</li>
+                </ul>
+              </div>
             </div>
+            <form class="form__form" id="cafe" action="cafe-contacts.html" name="category__form">
+              <fieldset class="form__input-container form__container_line_bottom">
+                <label class="form-input form-input_active">
+                  <input class="form-input__radio" type="radio" name="category" value="cafe" />
+                  <span>кафе/бар/ресторан</span>
+                  <div class="form-input__checker form-input__checker_checked"></div>
+                </label>
+              </fieldset>
+
+              <fieldset class="form__labeled-container">
+                <div class="form__unit">
+                  <label class="form__label">город</label>
+                  <select class="form__field form__list">
+                    <option value="" style="display: none">выберите из списка</option>
+                    <option>Москва</option>
+                    <option>Санкт-Петербург</option>
+                  </select>
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="cafeName">название заведения</label>
+                  <input
+                    class="form__field formCafe__input_type_text"
+                    id="cafeName"
+                    type="text"
+                    name="category"
+                    placeholder="введите название заведения"
+                    value=""
+                  />
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="contact-name">контактное лицо</label>
+                  <input
+                    class="form__field formCafe__input_type_text"
+                    id="contact-name"
+                    type="text"
+                    name="category"
+                    placeholder="введите ФИО"
+                    value=""
+                  />
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="contact-number">телефон для связи с организатором</label>
+                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="cafe-description">описание</label>
+                  <textarea
+                    class="form__field form-input form__textarea"
+                    name=""
+                    id="cafe-description"
+                    placeholder="Укажите что из меню будет принимать участие в акции"
+                    cols="30"
+                    rows="6"
+                  ></textarea>
+                </div>
+              </fieldset>
+            </form>
           </div>
-          <form class="form__form" id="cafe" action="cafe-contacts.html" name="category__form">
-            <fieldset class="form__input-container form__container_line_bottom">
-              <label class="form-input form-input_active">
-                <input class="form-input__radio" type="radio" name="category" value="cafe" />
-                <span>кафе/бар/ресторан</span>
-                <div class="form-input__checker form-input__checker_checked"></div>
-              </label>
-            </fieldset>
-
-            <fieldset class="form__labeled-container">
-              <div class="form__unit">
-                <label class="form__label">город</label>
-                <select class="form__field form__list">
-                  <option value="" style="display: none">выберите из списка</option>
-                  <option>Москва</option>
-                  <option>Санкт-Петербург</option>
-                </select>
-              </div>
-
-              <div class="form__unit">
-                <label class="form__label" for="cafeName">название заведения</label>
-                <input
-                  class="form__field formCafe__input_type_text"
-                  id="cafeName"
-                  type="text"
-                  name="category"
-                  placeholder="введите название заведения"
-                  value=""
-                />
-              </div>
-
-              <div class="form__unit">
-                <label class="form__label" for="contact-name">контактное лицо</label>
-                <input
-                  class="form__field formCafe__input_type_text"
-                  id="contact-name"
-                  type="text"
-                  name="category"
-                  placeholder="введите ФИО"
-                  value=""
-                />
-              </div>
-
-              <div class="form__unit">
-                <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-                <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
-              </div>
-
-              <div class="form__unit">
-                <label class="form__label" for="cafe-description">описание</label>
-                <textarea
-                  class="form__field form-input form__textarea"
-                  name=""
-                  id="cafe-description"
-                  placeholder="Укажите что из меню будет принимать участие в акции"
-                  cols="30"
-                  rows="6"
-                ></textarea>
-              </div>
-            </fieldset>
-          </form>
-        </div>
-        <div class="form__controls">
-          <button
-            type="button"
-            name="category__form"
-            class="form__button_type_back form-input form-input__control"
-            onclick="location.href='./category.html';"
-          >
-            назад
-          </button>
-          <button
-            type="submit"
-            form="cafe"
-            name="category__form"
-            class="form__button_type_submit form-input form-input__control form-input__control_active"
-          ></button>
+          <div class="form__controls">
+            <button
+              type="button"
+              name="category__form"
+              class="form__button_type_back form-input form-input__control"
+              onclick="location.href='./category.html';"
+            >
+              назад
+            </button>
+            <button
+              type="submit"
+              form="cafe"
+              name="category__form"
+              class="form__button_type_submit form-input form-input__control form-input__control_active"
+            ></button>
+          </div>
         </div>
       </main>
       <footer class="footer">
