--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -44,100 +44,102 @@
 
       <main class="content">
         <h1 class="form__title">стать участником</h1>
-        <div class="form__container">
-          <p class="form__step">шаг 2 из 4</p>
-          <div class="form__instruction">
-            <p class="form__heading">заполните форму</p>
-            <div class="form__paragraphs">
-              <p class="form__paragraph">Определитесь с типом мероприятия — лекция, консультация или мастер-класс.</p>
-              <p class="form__paragraph">Когда люди будут покупать билеты, вам будут приходить уведомления на электронную почту</p>
+        <div class="form__content">
+          <div class="form__container">
+            <p class="form__step">шаг 2 из 4</p>
+            <div class="form__instruction">
+              <p class="form__heading">заполните форму</p>
+              <div class="form__paragraphs">
+                <p class="form__paragraph">Определитесь с типом мероприятия — лекция, консультация или мастер-класс.</p>
+                <p class="form__paragraph">Когда люди будут покупать билеты, вам будут приходить уведомления на электронную почту</p>
+              </div>
             </div>
+            <form class="form__form" id="master-class" action="master-class_Step3.html" name="category__form">
+              <fieldset class="form__input-container">
+                <label class="form-input form-input_active">
+                  <input class="form-input__radio" type="radio" name="category" value="master-class" />
+                  <span>мастер-класс/лекция</span>
+                  <div class="form-input__checker form-input__checker_checked"></div>
+                </label>
+              </fieldset>
+
+              <fieldset class="form__radio-block">
+                <label class="form__radio-unit">
+                  <div class="form-input__radio-icon form-input__radio-icon_checked"></div>
+                  <input class="form-input__radio" type="radio" name="master-class-form" value="online" checked />
+                  <span>онлайн</span>
+                </label>
+
+                <label class="form__radio-unit">
+                  <div class="form-input__radio-icon"></div>
+                  <input class="form-input__radio" type="radio" name="master-class-form" value="offline" />
+                  <span>оффлайн</span>
+                </label>
+              </fieldset>
+
+              <fieldset class="form__labeled-container">
+                <div class="form__unit">
+                  <label class="form__label">город</label>
+                  <select class="form__field form__list">
+                    <option value="" style="display: none">выберите из списка</option>
+                    <option>Москва</option>
+                    <option>Санкт-Петербург</option>
+                  </select>
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="event-name">название мероприятия</label>
+                  <input
+                    class="form__field formCafe__input_type_text"
+                    id="event-name"
+                    type="text"
+                    name="event-name"
+                    placeholder="введите название мероприятия"
+                    value=""
+                  />
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="event-date">дата проведения</label>
+                  <input
+                    class="form__field formCafe__input_type_text"
+                    id="event-date"
+                    type="text"
+                    name="event-date"
+                    placeholder="укажите дату в формате дд.мм.гггг"
+                    value=""
+                  />
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="contact-name">контактное лицо</label>
+                  <input
+                    class="form__field formCafe__input_type_text"
+                    id="contact-name"
+                    type="text"
+                    name="category"
+                    placeholder="введите ФИО"
+                    value=""
+                  />
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="contact-number">номер телефона для связи с организатором</label>
+                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
+                </div>
+              </fieldset>
+            </form>
           </div>
-          <form class="form__form" id="master-class" action="master-class_Step3.html" name="category__form">
-            <fieldset class="form__input-container">
-              <label class="form-input form-input_active">
-                <input class="form-input__radio" type="radio" name="category" value="master-class" />
-                <span>мастер-класс/лекция</span>
-                <div class="form-input__checker form-input__checker_checked"></div>
-              </label>
-            </fieldset>
-
-            <fieldset class="form__radio-block">
-              <label class="form__radio-unit">
-                <div class="form-input__radio-icon form-input__radio-icon_checked"></div>
-                <input class="form-input__radio" type="radio" name="master-class-form" value="online" checked />
-                <span>онлайн</span>
-              </label>
-
-              <label class="form__radio-unit">
-                <div class="form-input__radio-icon"></div>
-                <input class="form-input__radio" type="radio" name="master-class-form" value="offline" />
-                <span>оффлайн</span>
-              </label>
-            </fieldset>
-
-            <fieldset class="form__labeled-container">
-              <div class="form__unit">
-                <label class="form__label">город</label>
-                <select class="form__field form__list">
-                  <option value="" style="display: none">выберите из списка</option>
-                  <option>Москва</option>
-                  <option>Санкт-Петербург</option>
-                </select>
-              </div>
-
-              <div class="form__unit">
-                <label class="form__label" for="event-name">название мероприятия</label>
-                <input
-                  class="form__field formCafe__input_type_text"
-                  id="event-name"
-                  type="text"
-                  name="event-name"
-                  placeholder="введите название мероприятия"
-                  value=""
-                />
-              </div>
-
-              <div class="form__unit">
-                <label class="form__label" for="event-date">дата проведения</label>
-                <input
-                  class="form__field formCafe__input_type_text"
-                  id="event-date"
-                  type="text"
-                  name="event-date"
-                  placeholder="укажите дату в формате дд.мм.гггг"
-                  value=""
-                />
-              </div>
-
-              <div class="form__unit">
-                <label class="form__label" for="contact-name">контактное лицо</label>
-                <input
-                  class="form__field formCafe__input_type_text"
-                  id="contact-name"
-                  type="text"
-                  name="category"
-                  placeholder="введите ФИО"
-                  value=""
-                />
-              </div>
-
-              <div class="form__unit">
-                <label class="form__label" for="contact-number">номер телефона для связи с организатором</label>
-                <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
-              </div>
-            </fieldset>
-          </form>
-        </div>
-        <div class="form__controls">
-          <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='./category.html';">
-            назад
-          </button>
-          <button
-            type="submit"
-            form="master-class"
-            class="form__button_type_submit form-input form-input__control form-input__control_active"
-          ></button>
+          <div class="form__controls">
+            <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='./category.html';">
+              назад
+            </button>
+            <button
+              type="submit"
+              form="master-class"
+              class="form__button_type_submit form-input form-input__control form-input__control_active"
+            ></button>
+          </div>
         </div>
       </main>
       <footer class="footer">
