--- a/pages/master-class_Step3.html
+++ b/pages/master-class_Step3.html
@@ -44,72 +44,74 @@
 
       <main class="content">
         <h1 class="form__title">стать участником</h1>
-        <div class="form__container">
-          <p class="form__step">шаг 3 из 4</p>
-          <div class="form__instruction">
-            <p class="form__heading">укажите контакты и часы работы</p>
-            <div class="form__paragraphs">
-              <p class="form__paragraph">Эти данные появятся в описании карточки вашего мероприятия в нашем каталоге событий</p>
+        <div class="form__content">
+          <div class="form__container">
+            <p class="form__step">шаг 3 из 4</p>
+            <div class="form__instruction">
+              <p class="form__heading">укажите контакты и часы работы</p>
+              <div class="form__paragraphs">
+                <p class="form__paragraph">Эти данные появятся в описании карточки вашего мероприятия в нашем каталоге событий</p>
+              </div>
             </div>
+            <form class="form__form" action="" name="category__form">
+              <fieldset class="form__labeled-container">
+                <div class="form__unit">
+                  <label class="form__label" for="cafeClock">время проведения</label>
+                  <input
+                    class="form__field formCafe__input_type_text"
+                    id="cafeClock"
+                    type="text"
+                    name="category"
+                    placeholder="например: 18:00-22:00"
+                    value=""
+                  />
+                </div>
+                <div class="form__unit">
+                  <label class="form__label" for="cafeAdress">адрес проведения</label>
+                  <input
+                    class="form__field formCafe__input_type_text"
+                    id="cafeAdress"
+                    type="text"
+                    name="category"
+                    placeholder="каждый адрес с новой строки"
+                    value=""
+                  />
+                </div>
+                <div class="form__unit">
+                  <label class="form__label" for="contact-number">номер телефона для бронирования</label>
+                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
+                </div>
+                <div class="form__unit">
+                  <label class="form__label" for="contact-price">стоимость участия</label>
+                  <input
+                    class="form__field formCafe__input_type_text"
+                    id="contact-price"
+                    type="text"
+                    name="category"
+                    placeholder="укажите стоимость в рублях"
+                    value=""
+                  />
+                </div>
+                <div class="form__unit">
+                  <label class="form__label" for="cafe-description">описание</label>
+                  <textarea
+                    class="form__field form-input form__textarea"
+                    name=""
+                    id="cafe-description"
+                    placeholder="Напишите небольшой анонс вашего местер-класса или лекции. Чем мероприятие будет полезно, чему посвящено"
+                    cols="30"
+                    rows="6"
+                  ></textarea>
+                </div>
+              </fieldset>
+            </form>
           </div>
-          <form class="form__form" action="" name="category__form">
-            <fieldset class="form__labeled-container">
-              <div class="form__unit">
-                <label class="form__label" for="cafeClock">время проведения</label>
-                <input
-                  class="form__field formCafe__input_type_text"
-                  id="cafeClock"
-                  type="text"
-                  name="category"
-                  placeholder="например: 18:00-22:00"
-                  value=""
-                />
-              </div>
-              <div class="form__unit">
-                <label class="form__label" for="cafeAdress">адрес проведения</label>
-                <input
-                  class="form__field formCafe__input_type_text"
-                  id="cafeAdress"
-                  type="text"
-                  name="category"
-                  placeholder="каждый адрес с новой строки"
-                  value=""
-                />
-              </div>
-              <div class="form__unit">
-                <label class="form__label" for="contact-number">номер телефона для бронирования</label>
-                <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
-              </div>
-              <div class="form__unit">
-                <label class="form__label" for="contact-price">стоимость участия</label>
-                <input
-                  class="form__field formCafe__input_type_text"
-                  id="contact-price"
-                  type="text"
-                  name="category"
-                  placeholder="укажите стоимость в рублях"
-                  value=""
-                />
-              </div>
-              <div class="form__unit">
-                <label class="form__label" for="cafe-description">описание</label>
-                <textarea
-                  class="form__field form-input form__textarea"
-                  name=""
-                  id="cafe-description"
-                  placeholder="Напишите небольшой анонс вашего местер-класса или лекции. Чем мероприятие будет полезно, чему посвящено"
-                  cols="30"
-                  rows="6"
-                ></textarea>
-              </div>
-            </fieldset>
-          </form>
-        </div>
-        <div class="form__controls">
-          <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='../pages/master-class.html';">
-            назад
-          </button>
-          <button type="submit" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
+          <div class="form__controls">
+            <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='../pages/master-class.html';">
+              назад
+            </button>
+            <button type="submit" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
+          </div>
         </div>
       </main>
       <footer class="footer">
