--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -44,87 +44,89 @@
 
       <main class="content">
         <h1 class="form__title">стать участником</h1>
-        <div class="form__container">
-          <p class="form__step">шаг 2 из 4</p>
-          <div class="form__instruction">
-            <p class="form__heading">заполните форму</p>
-            <div class="form__paragraphs">
-              <p class="form__paragraph">Организуйте свою посиделку, вечеринку или концерт.</p>
-              <p class="form__paragraph">Пригласите друзей и тех, кто захочет помочь Ночлежке.</p>
-              <p class="form__paragraph">Установите пожертвование, например кусочек пирога за любую комфортную сумму</p>
+        <div class="form__content">
+          <div class="form__container">
+            <p class="form__step">шаг 2 из 4</p>
+            <div class="form__instruction">
+              <p class="form__heading">заполните форму</p>
+              <div class="form__paragraphs">
+                <p class="form__paragraph">Организуйте свою посиделку, вечеринку или концерт.</p>
+                <p class="form__paragraph">Пригласите друзей и тех, кто захочет помочь Ночлежке.</p>
+                <p class="form__paragraph">Установите пожертвование, например кусочек пирога за любую комфортную сумму</p>
+              </div>
             </div>
+            <form class="form__form" id="party" action="partyForm_step3.html" name="category__form">
+              <fieldset class="form__input-container form__container_line_bottom">
+                <label class="form-input form-input_active">
+                  <input class="form-input__radio" type="radio" name="category" value="master-class" />
+                  <span>посиделки/вечеринка</span>
+                  <img src="../images/form/checked.svg" class="form-input__checked" />
+                </label>
+              </fieldset>
+
+              <fieldset class="form__input-container">
+                <label class="form__label">город</label>
+                <select class="form__field form__city-list">
+                  <option value="" style="display: none">Выберите из списка</option>
+                  <option>Москва</option>
+                  <option>Санкт-Петербург</option>
+                </select>
+                <label class="form__label" for="cafeName">название мероприятия</label>
+                <input
+                  class="form__field formCafe__input_type_text"
+                  id="cafeName"
+                  type="text"
+                  name="partyForm"
+                  placeholder="введите название"
+                  value=""
+                />
+              </fieldset>
+              <fieldset class="form__radio-block form__radio-block_container">
+                <label class="form__radio-unit">
+                  <div class="form-input__radio-icon form-input__radio-icon_checked"></div>
+                  <input class="form-input__radio" type="radio" name="party-form" value="online" />
+                  <span>открытое мероприятие</span>
+                </label>
+                <p class="form__radio-subtitle">адрес отобразим в карточке события</p>
+
+                <label class="form__radio-unit">
+                  <div class="form-input__radio-icon"></div>
+                  <input class="form-input__radio" type="radio" name="party-form" value="offline" />
+                  <span>закрытое мероприятие</span>
+                </label>
+                <p class="form__radio-subtitle">адрес увидят только, те кому вы оправите ссылку на событие</p>
+              </fieldset>
+
+              <fieldset class="form__input-container">
+                <label class="form__label" for="cafeName">дата проведения</label>
+                <input
+                  class="form__field formCafe__input_type_text"
+                  id="cafeName"
+                  type="text"
+                  name="partyForm"
+                  placeholder="укажите дату в формате дд.мм.гггг"
+                  value=""
+                />
+                <label class="form__label" for="contact-name">контактное лицо</label>
+                <input
+                  class="form__field formCafe__input_type_text"
+                  id="contact-name"
+                  type="text"
+                  name="partyForm"
+                  placeholder="введите ФИО"
+                  value=""
+                />
+                <label class="form__label" for="contact-number">телефон для связи с организатором</label>
+                <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="partyForm" value="+7(" />
+              </fieldset>
+            </form>
           </div>
-          <form class="form__form" id="party" action="partyForm_step3.html" name="category__form">
-            <fieldset class="form__input-container form__container_line_bottom">
-              <label class="form-input form-input_active">
-                <input class="form-input__radio" type="radio" name="category" value="master-class" />
-                <span>посиделки/вечеринка</span>
-                <img src="../images/form/checked.svg" class="form-input__checked" />
-              </label>
-            </fieldset>
-
-            <fieldset class="form__input-container">
-              <label class="form__label">город</label>
-              <select class="form__field form__city-list">
-                <option value="" style="display: none">Выберите из списка</option>
-                <option>Москва</option>
-                <option>Санкт-Петербург</option>
-              </select>
-              <label class="form__label" for="cafeName">название мероприятия</label>
-              <input
-                class="form__field formCafe__input_type_text"
-                id="cafeName"
-                type="text"
-                name="partyForm"
-                placeholder="введите название"
-                value=""
-              />
-            </fieldset>
-            <fieldset class="form__radio-block form__radio-block_container">
-              <label class="form__radio-unit">
-                <div class="form-input__radio-icon form-input__radio-icon_checked"></div>
-                <input class="form-input__radio" type="radio" name="party-form" value="online" />
-                <span>открытое мероприятие</span>
-              </label>
-              <p class="form__radio-subtitle">адрес отобразим в карточке события</p>
-
-              <label class="form__radio-unit">
-                <div class="form-input__radio-icon"></div>
-                <input class="form-input__radio" type="radio" name="party-form" value="offline" />
-                <span>закрытое мероприятие</span>
-              </label>
-              <p class="form__radio-subtitle">адрес увидят только, те кому вы оправите ссылку на событие</p>
-            </fieldset>
-
-            <fieldset class="form__input-container">
-              <label class="form__label" for="cafeName">дата проведения</label>
-              <input
-                class="form__field formCafe__input_type_text"
-                id="cafeName"
-                type="text"
-                name="partyForm"
-                placeholder="укажите дату в формате дд.мм.гггг"
-                value=""
-              />
-              <label class="form__label" for="contact-name">контактное лицо</label>
-              <input
-                class="form__field formCafe__input_type_text"
-                id="contact-name"
-                type="text"
-                name="partyForm"
-                placeholder="введите ФИО"
-                value=""
-              />
-              <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-              <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="partyForm" value="+7(" />
-            </fieldset>
-          </form>
-        </div>
-        <div class="form__controls">
-          <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='../pages/category.html';">
-            назад
-          </button>
-          <button type="submit" form="party" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
+          <div class="form__controls">
+            <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='../pages/category.html';">
+              назад
+            </button>
+            <button type="submit" form="party" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
+          </div>
         </div>
       </main>
 
