--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -59,13 +59,12 @@
               </div>
             </div>
             <form class="form__form" id="cafe" action="cafe-contacts.html" name="category__form">
-              <fieldset class="form__input-container form__container_line_bottom">
-                <label class="form-input form-input_active">
-                  <input class="form-input__radio" type="radio" name="category" value="cafe" />
+              <div class="form__input-container form__container_line_bottom">
+                <div class="form-input form-input_active">
                   <span>кафе/бар/ресторан</span>
                   <div class="form-input__checker form-input__checker_checked"></div>
-                </label>
-              </fieldset>
+                </div>
+              </div>
 
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
@@ -78,12 +77,12 @@
                 </div>
 
                 <div class="form__unit">
-                  <label class="form__label" for="cafeName">название заведения</label>
+                  <label class="form__label" for="cafe-name">название заведения</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="cafeName"
+                    id="cafe-name"
                     type="text"
-                    name="category"
+                    name="cafe-name"
                     placeholder="введите название заведения"
                     value=""
                   />
@@ -95,7 +94,7 @@
                     class="form__field formCafe__input_type_text"
                     id="contact-name"
                     type="text"
-                    name="category"
+                    name="contact-name"
                     placeholder="введите ФИО"
                     value=""
                   />
@@ -103,7 +102,7 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
+                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
                 </div>
 
                 <div class="form__unit">
