--- a/pages/category.html
+++ b/pages/category.html
@@ -52,22 +52,22 @@
             <form class="form__form" id="categoryForm" name="category__form">
               <fieldset class="form__input-container">
                 <label class="form-input radio-button form-input_active">
-                  <input class="form-input__radio" type="radio" name="category" value="cafe" checked />
+                  <input class="form-input__radio" type="radio" name="category_cafe" value="cafe" checked />
                   <span>кафе/бар/ресторан</span>
                   <div class="form-input__checker form-input__checker_checked"></div>
                 </label>
                 <label class="form-input radio-button">
-                  <input class="form-input__radio" type="radio" name="category" value="master-class" />
+                  <input class="form-input__radio" type="radio" name="category_master-class" value="master-class" />
                   <span>мастер-класс/лекция</span>
                   <div class="form-input__checker"></div>
                 </label>
                 <label class="form-input radio-button">
-                  <input class="form-input__radio" type="radio" name="category" value="party" />
+                  <input class="form-input__radio" type="radio" name="category_party" value="party" />
                   <span>посиделки/вечеринка</span>
                   <div class="form-input__checker"></div>
                 </label>
                 <label class="form-input radio-button">
-                  <input class="form-input__radio" type="radio" name="category" value="other" />
+                  <input class="form-input__radio" type="radio" name="category_other" value="other" />
                   <span>другое</span>
                   <div class="form-input__checker"></div>
                 </label>
