--- a/pages/master-class_Step3.html
+++ b/pages/master-class_Step3.html
@@ -56,38 +56,38 @@
             <form class="form__form" action="" name="category__form">
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
-                  <label class="form__label" for="cafeClock">время проведения</label>
+                  <label class="form__label" for="cafe-clock">время проведения</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="cafeClock"
+                    id="cafe-clock"
                     type="text"
-                    name="category"
+                    name="cafe-clock"
                     placeholder="например: 18:00-22:00"
                     value=""
                   />
                 </div>
                 <div class="form__unit">
-                  <label class="form__label" for="cafeAdress">адрес проведения</label>
+                  <label class="form__label" for="cafe-address">адрес проведения</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="cafeAdress"
+                    id="cafe-address"
                     type="text"
-                    name="category"
+                    name="cafe-address"
                     placeholder="каждый адрес с новой строки"
                     value=""
                   />
                 </div>
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для бронирования</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
+                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
                 </div>
                 <div class="form__unit">
-                  <label class="form__label" for="contact-price">стоимость участия</label>
+                  <label class="form__label" for="participation-price">стоимость участия</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="contact-price"
+                    id="participation-price"
                     type="text"
-                    name="category"
+                    name="participation-price"
                     placeholder="укажите стоимость в рублях"
                     value=""
                   />
