--- a/pages/other-form_step3.html
+++ b/pages/other-form_step3.html
@@ -56,38 +56,38 @@
             <form class="form__form" id="otherContacts" name="category__form">
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
-                  <label class="form__label" for="otherClock">время проведения</label>
+                  <label class="form__label" for="other-clock">время проведения</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="otherClock"
+                    id="other-clock"
                     type="text"
-                    name="category"
+                    name="other-clock"
                     placeholder="например: 18:00-22:00"
                     value=""
                   />
                 </div>
                 <div class="form__unit">
-                  <label class="form__label" for="otherAdress">адрес проведения</label>
+                  <label class="form__label" for="other-address">адрес проведения</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="otherAdress"
+                    id="other-address"
                     type="text"
-                    name="category"
+                    name="other-address"
                     placeholder="каждый адрес с новой строки"
                     value=""
                   />
                 </div>
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для бронирования</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
+                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
                 </div>
                 <div class="form__unit">
-                  <label class="form__label" for="contact-price">стоимость участия</label>
+                  <label class="form__label" for="participate-price">стоимость участия</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="contact-price"
+                    id="participate-price"
                     type="text"
-                    name="category"
+                    name="participate-price"
                     placeholder="укажите стоимость в рублях"
                     value=""
                   />
@@ -96,7 +96,7 @@
                   <label class="form__label" for="other-description">описание</label>
                   <textarea
                     class="form__field form-input form__textarea"
-                    name=""
+                    name="other-description"
                     id="other-description"
                     placeholder="Напишите небольшое приглашение своим посетителям. Людям нравятся простые обращения, дружественный тон"
                     cols="30"
