--- a/pages/partyForm_step3.html
+++ b/pages/partyForm_step3.html
@@ -56,53 +56,53 @@
             <form class="form__form" id="partyContacts" action="" name="category__form">
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
-                  <label class="form__label" for="partyClock">время проведения</label>
+                  <label class="form__label" for="party-clock">время проведения</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="partyClock"
+                    id="party-clock"
                     type="text"
-                    name="category"
+                    name="party-clock"
                     placeholder="например: 18:00-22:00"
                     value=""
                   />
                 </div>
                 <div class="form__unit">
-                  <label class="form__label" for="partyAdress">адрес проведения</label>
+                  <label class="form__label" for="party-address">адрес проведения</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="partyAdress"
+                    id="party-address"
                     type="text"
-                    name="category"
+                    name="party-address"
                     placeholder="каждый адрес с новой строки"
                     value=""
                   />
                 </div>
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для бронирования</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
+                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
                 </div>
                 <div class="form__unit">
-                  <label class="form__label" for="contact-price">стоимость участия</label>
+                  <label class="form__label" for="participate-price">стоимость участия</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="contact-price"
+                    id="participate-price"
                     type="text"
-                    name="category"
+                    name="participate-price"
                     placeholder="укажите стоимость в рублях"
                     value=""
                   />
                 </div>
                 <div class="form__unit">
                   <label class="form__label" for="contact-website">ссылка на сайт</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-website" type="text" name="category" value="https://" />
+                  <input class="form__field formCafe__input_type_number" id="contact-website" type="text" name="contact-website" value="https://" />
                 </div>
                 <div class="form__unit">
-                  <label class="form__label" for="partyLinks">ссылки на соцсети</label>
+                  <label class="form__label" for="party-links">ссылки на соцсети</label>
                   <input
                     class="form__field formCafe__input_type_text"
-                    id="partyLinks"
+                    id="party-links"
                     type="text"
-                    name="category"
+                    name="party-links"
                     placeholder="каждую ссылку с новой строки"
                     value=""
                   />
