--- a/pages/cafe-contacts.html
+++ b/pages/cafe-contacts.html
@@ -58,7 +58,13 @@
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
                   <label class="form__label">часы работы заведения</label>
-                  <input class="form__field" id="cafe-work-hours" type="text" name="category" placeholder="например: 10:00-13:00, 13:00-19:00" />
+                  <input
+                    class="form__field"
+                    id="cafe-work-hours"
+                    type="text"
+                    name="cafe-work-hours"
+                    placeholder="например: 10:00-13:00, 13:00-19:00"
+                  />
                 </div>
 
                 <div class="form__unit">
@@ -67,7 +73,7 @@
                     class="form__field formCafe__input_type_text"
                     id="cafe-address"
                     type="text"
-                    name="category"
+                    name="cafe-address"
                     placeholder="каждый адрес с новой строки"
                     value=""
                   />
@@ -79,7 +85,7 @@
                     class="form__field formCafe__input_type_text"
                     id="contact-name"
                     type="text"
-                    name="category"
+                    name="contact-name"
                     placeholder="введите ФИО"
                     value=""
                   />
@@ -87,12 +93,12 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона заведения</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
+                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">ссылка на сайт</label>
-                  <input class="form__field formCafe__input_type_text" id="cafe-site" type="text" name="category" value="https://" />
+                  <input class="form__field formCafe__input_type_text" id="cafe-site" type="text" name="cafe-site" value="https://" />
                 </div>
 
                 <div class="form__unit">
@@ -101,7 +107,7 @@
                     class="form__field formCafe__input_type_text"
                     id="cafe-social-links"
                     type="text"
-                    name="category"
+                    name="cafe-social-links"
                     placeholder="каждую ссылку с новой строки"
                     value=""
                   />
@@ -111,7 +117,7 @@
                   <label class="form__label" for="cafe-description">описание</label>
                   <textarea
                     class="form__field form-input form__textarea"
-                    name=""
+                    name="cafe-description"
                     id="cafe-description"
                     placeholder="Напишите небольшое приглашение своим посетителям. Людям нравятся простые обращения, дружественный тон"
                     cols="30"
