--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -56,13 +56,12 @@
               </div>
             </div>
             <form class="form__form" id="party" action="partyForm_step3.html" name="category__form">
-              <fieldset class="form__input-container form__container_line_bottom">
-                <label class="form-input form-input_active">
-                  <input class="form-input__radio" type="radio" name="category" value="master-class" />
+              <div class="form__input-container form__container_line_bottom">
+                <div class="form-input form-input_active">
                   <span>посиделки/вечеринка</span>
-                  <img src="../images/form/checked.svg" class="form-input__checked" />
-                </label>
-              </fieldset>
+                  <div class="form-input__checker form-input__checker_checked"></div>
+                </div>
+              </div>
 
               <fieldset class="form__input-container">
                 <label class="form__label">город</label>
@@ -71,12 +70,12 @@
                   <option>Москва</option>
                   <option>Санкт-Петербург</option>
                 </select>
-                <label class="form__label" for="cafeName">название мероприятия</label>
+                <label class="form__label" for="party-name">название мероприятия</label>
                 <input
                   class="form__field formCafe__input_type_text"
-                  id="cafeName"
+                  id="party-name"
                   type="text"
-                  name="partyForm"
+                  name="party-name"
                   placeholder="введите название"
                   value=""
                 />
@@ -84,26 +83,26 @@
               <fieldset class="form__radio-block form__radio-block_container">
                 <label class="form__radio-unit">
                   <div class="form-input__radio-icon form-input__radio-icon_checked"></div>
-                  <input class="form-input__radio" type="radio" name="party-form" value="online" />
+                  <input class="form-input__radio" type="radio" id="party-public" name="party-public" value="public" />
                   <span>открытое мероприятие</span>
                 </label>
                 <p class="form__radio-subtitle">адрес отобразим в карточке события</p>
 
                 <label class="form__radio-unit">
                   <div class="form-input__radio-icon"></div>
-                  <input class="form-input__radio" type="radio" name="party-form" value="offline" />
+                  <input class="form-input__radio" type="radio" id="party-private" name="party-private" value="private" />
                   <span>закрытое мероприятие</span>
                 </label>
                 <p class="form__radio-subtitle">адрес увидят только, те кому вы оправите ссылку на событие</p>
               </fieldset>
 
               <fieldset class="form__input-container">
-                <label class="form__label" for="cafeName">дата проведения</label>
+                <label class="form__label" for="event-date">дата проведения</label>
                 <input
                   class="form__field formCafe__input_type_text"
-                  id="cafeName"
+                  id="event-date"
                   type="text"
-                  name="partyForm"
+                  name="event-date"
                   placeholder="укажите дату в формате дд.мм.гггг"
                   value=""
                 />
@@ -112,12 +111,12 @@
                   class="form__field formCafe__input_type_text"
                   id="contact-name"
                   type="text"
-                  name="partyForm"
+                  name="contact-name"
                   placeholder="введите ФИО"
                   value=""
                 />
                 <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-                <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="partyForm" value="+7(" />
+                <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
               </fieldset>
             </form>
           </div>
