Mobile form btn space

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <main class="content">
         <h1 class="participate__title">стать участником</h1>
         <div class="participate__content">
-          <div>
+          <div class="participate__container">
             <h2 class="participate__subtitle">как участвовать?</h2>
             <div class="question-block">
               <h3 class="question-block__number">1</h3>
