--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="header__bar-left">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
-              <img src="./images/icon_location.svg" alt="location icon" class="button__icon" />
+              <img src="./images/icon_location.svg" alt="геометка" class="button__icon" />
               Санкт-Петербург
             </button>
           </div>
@@ -34,7 +34,7 @@
           </nav>
           <div class="header__user-actions">
             <button type="button" class="button button_type_link">
-              <img src="./images/icon_heart.svg" alt="heart icon" class="button__icon" />
+              <img src="./images/icon_heart.svg" alt="сердце" class="button__icon" />
               хочу пойти
             </button>
             <button type="button" class="button button_type_filled button_place_header">поддержать</button>
@@ -126,18 +126,18 @@
             <h3 class="footer__title">мы в соцсетях:</h3>
             <ul class="footer__icons">
               <li class="footer__icon">
-                <a href="">
-                  <img src="./images/footer_facebook-icon.svg" alt="facebook" />
+                <a href="#">
+                  <img src="../images/footer_facebook-icon.svg" alt="Фейсбук" />
                 </a>
               </li>
               <li class="footer__icon">
-                <a href="">
-                  <img src="./images/footer_instagram-icon.svg" alt="instagram" />
+                <a href="#">
+                  <img src="../images/footer_instagram-icon.svg" alt="Инстаграмм" />
                 </a>
               </li>
               <li class="footer__icon">
-                <a href="">
-                  <img src="./images/footer_vk-icon.svg" alt="vkontakte" />
+                <a href="#">
+                  <img src="../images/footer_vk-icon.svg" alt="Вконтакте" />
                 </a>
               </li>
             </ul>
