Erorrs on pages fix

--- a/pages/cafe-contacts.html
+++ b/pages/cafe-contacts.html
@@ -57,7 +57,7 @@
             <form class="form__form" id="cafeContacts" name="category__form">
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
-                  <label class="form__label">часы работы заведения</label>
+                  <label class="form__label" for="cafe-work-hours">часы работы заведения</label>
                   <input
                     class="form__field"
                     id="cafe-work-hours"
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="form__unit">
-                  <label class="form__label" for="cafeName">адрес заведения</label>
+                  <label class="form__label" for="cafe-address">адрес заведения</label>
                   <input
                     class="form__field formCafe__input_type_text"
                     id="cafe-address"
