--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -109,7 +109,7 @@
                   <label class="form__label" for="cafe-description">описание</label>
                   <textarea
                     class="form__field form-input form__textarea"
-                    name=""
+                    name="cafe-description"
                     id="cafe-description"
                     placeholder="Укажите что из меню будет принимать участие в акции"
                     cols="30"
