--- a/pages/category.html
+++ b/pages/category.html
@@ -54,22 +54,22 @@
                 <label class="form-input radio-button">
                   <input class="form-input__radio" type="radio" name="category_cafe" value="cafe" />
                   <span>кафе/бар/ресторан</span>
-                  <div class="form-input__checker"></div>
+                  <span class="form-input__checker"></span>
                 </label>
                 <label class="form-input radio-button">
                   <input class="form-input__radio" type="radio" name="category_master-class" value="master-class" />
                   <span>мастер-класс/лекция</span>
-                  <div class="form-input__checker"></div>
+                  <span class="form-input__checker"></span>
                 </label>
                 <label class="form-input radio-button">
                   <input class="form-input__radio" type="radio" name="category_party" value="party" />
                   <span>посиделки/вечеринка</span>
-                  <div class="form-input__checker"></div>
+                  <span class="form-input__checker"></span>
                 </label>
                 <label class="form-input radio-button">
                   <input class="form-input__radio" type="radio" name="category_other" value="other" />
                   <span>другое</span>
-                  <div class="form-input__checker"></div>
+                  <span class="form-input__checker"></span>
                 </label>
               </fieldset>
             </form>
