--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -64,13 +64,13 @@
 
               <fieldset class="form__radio-block">
                 <label class="form__radio-unit">
-                  <div class="form-input__radio-icon form-input__radio-icon_checked"></div>
+                  <span class="form-input__radio-icon form-input__radio-icon_checked"></span>
                   <input class="form-input__radio" type="radio" id="master-class-online" name="master-class-online" value="online" checked />
                   <span>онлайн</span>
                 </label>
 
                 <label class="form__radio-unit">
-                  <div class="form-input__radio-icon"></div>
+                  <span class="form-input__radio-icon"></span>
                   <input class="form-input__radio" type="radio" id="master-class-offline" name="master-class-offline" value="offline" />
                   <span>оффлайн</span>
                 </label>
