--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -82,14 +82,14 @@
               </fieldset>
               <fieldset class="form__radio-block form__radio-block_container">
                 <label class="form__radio-unit">
-                  <div class="form-input__radio-icon form-input__radio-icon_checked"></div>
+                  <span class="form-input__radio-icon form-input__radio-icon_checked"></span>
                   <input class="form-input__radio" type="radio" id="party-public" name="party-public" value="public" />
                   <span>открытое мероприятие</span>
                 </label>
                 <p class="form__radio-subtitle">адрес отобразим в карточке события</p>
 
                 <label class="form__radio-unit">
-                  <div class="form-input__radio-icon"></div>
+                  <span class="form-input__radio-icon"></span>
                   <input class="form-input__radio" type="radio" id="party-private" name="party-private" value="private" />
                   <span>закрытое мероприятие</span>
                 </label>
