--- a/pages/partyForm_step3.html
+++ b/pages/partyForm_step3.html
@@ -53,7 +53,7 @@
                 <p class="form__paragraph">Эти данные появятся в описании карточки вашего мероприятия в нашем каталоге событий</p>
               </div>
             </div>
-            <form class="form__form" id="partyContacts" action="" name="category__form">
+            <form class="form__form" id="partyContacts" name="category__form">
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
                   <label class="form__label" for="party-clock">время проведения</label>
@@ -111,7 +111,7 @@
                   <label class="form__label" for="party-description">описание</label>
                   <textarea
                     class="form__field form-input form__textarea"
-                    name=""
+                    name="party-description"
                     id="party-description"
                     placeholder="Напишите небольшой анонс вашего мероприятия. Чем оно будет полезно/чему посвящено"
                     cols="30"
