--- a/pages/master-class_Step3.html
+++ b/pages/master-class_Step3.html
@@ -53,7 +53,7 @@
                 <p class="form__paragraph">Эти данные появятся в описании карточки вашего мероприятия в нашем каталоге событий</p>
               </div>
             </div>
-            <form class="form__form" action="" name="category__form">
+            <form class="form__form" name="category__form">
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
                   <label class="form__label" for="cafe-clock">время проведения</label>
@@ -96,7 +96,7 @@
                   <label class="form__label" for="cafe-description">описание</label>
                   <textarea
                     class="form__field form-input form__textarea"
-                    name=""
+                    name="cafe-description"
                     id="cafe-description"
                     placeholder="Напишите небольшой анонс вашего местер-класса или лекции. Чем мероприятие будет полезно, чему посвящено"
                     cols="30"
