Fix BEM file structure

--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -59,7 +59,7 @@
               </div>
             </div>
             <form class="form__form" id="cafe" action="cafe-contacts.html" name="category__form">
-              <div class="form__input-container form__container_line_bottom">
+              <div class="form__input-container form-input__bottom-line">
                 <div class="form-input form-input_active">
                   <span>кафе/бар/ресторан</span>
                   <div class="form-input__checker form-input__checker_checked"></div>
@@ -137,7 +137,7 @@
           </div>
         </div>
       </main>
-      
+
       <footer class="footer">
         <div class="footer__container">
           <img class="footer__image" src="../images/footer_illustration.svg" alt="Ночлежка" />
