--- a/pages/other.html
+++ b/pages/other.html
@@ -56,7 +56,7 @@
               </div>
             </div>
             <form class="form__form" id="other" action="other-form_step3.html" name="category__form">
-              <div class="form__input-container form__container_line_bottom">
+              <div class="form__input-container form-input__bottom-line">
                 <div class="form-input form-input_active">
                   <span>другое</span>
                   <div class="form-input__checker form-input__checker_checked"></div>
