styles of paragraphs

--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -51,10 +51,10 @@
               <p class="form__heading">заполните форму</p>
               <div class="form__paragraphs">
                 <p class="form__paragraph">Для участия вы можете выбрать:</p>
-                <ul class="form__paragraph_type_list">
-                  <li><span class="form__paragraph_type_item">определенную позицию из меню</span></li>
-                  <li><span class="form__paragraph_type_item">группу позиций</span></li>
-                  <li><span class="form__paragraph_type_item">процент от продаж определенных позиций или всего меню</span></li>
+                <ul class="form__paragraph form__paragraph_type_list">
+                  <li><span class="form__paragraph">определенную позицию из меню</span></li>
+                  <li><span class="form__paragraph">группу позиций</span></li>
+                  <li><span class="form__paragraph">процент от продаж определенных позиций или всего меню</span></li>
                 </ul>
               </div>
             </div>
